fixed stretched fields with piece in it

--- a/src/css/pieces.css
+++ b/src/css/pieces.css
@@ -1,6 +1,6 @@
 img {
-    width: 85.51px;
-    height: 85.51px;
+    width: 85px;
+    height: 85px;
 }
 
 img:hover {
